# space-game

./: .clangd  .gitignore  build.bat
assets/font/: monogram.fnt
cmake/: toolchain.cmake
docs/: LIBRARIES.md  README.md
src/: pch.hpp
src/GEM/: .gitignore  assets.cpp  assets.hpp  assets_manual.cpp  assets_manual.hpp  logger.cpp  logger.hpp
src/GEM/base/: keycodes.hpp  macros.hpp  types.hpp
src/GEM/core/: filesystem.cpp  filesystem.hpp  input.cpp  input.hpp  memory.cpp  memory.hpp  platform.hpp
src/GEM/graphics/: color.cpp  color.hpp  drawing.cpp  drawing.hpp  renderer.cpp  renderer.hpp
src/GEM/math/: geometry.hpp  mathf.hpp  matrix.hpp  vector.hpp
src/forge/: CMakeLists.txt  forge.cpp
src/forge/component/: atlas.hpp
src/game/: entity.hpp
src/launcher/: CMakeLists.txt  launcher.cpp
